--- a/Watch App/Base.lproj/Interface.storyboard
+++ b/Watch App/Base.lproj/Interface.storyboard
@@ -8,7 +8,7 @@
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Watch_App" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="YOGraphImageKit_Demo_App" customModuleProvider="target">
                     <items>
                         <label alignment="center" text="01/01-01/31" id="MgG-ji-dpe"/>
                         <label alignment="center" text="1.2 GB" textAlignment="center" id="6C8-04-37x">
