--- a/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
+++ b/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
@@ -8,19 +8,9 @@
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="YOGraphImageKit_Demo_App" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="YOGraphImageKit_Demo_App__watchOS_" customModuleProvider="target">
                     <items>
-                        <label alignment="center" text="01/01-01/31" id="MgG-ji-dpe"/>
-                        <label alignment="center" text="1.2 GB" textAlignment="center" id="6C8-04-37x">
-                            <fontDescription key="font" style="UICTFontTextStyleHeadline"/>
-                        </label>
-                        <imageView alignment="left" verticalAlignment="bottom" id="Fst-AR-mdu"/>
-                        <group width="1" height="0.16" alignment="left" verticalAlignment="bottom" id="CLe-73-u3V">
-                            <items>
-                                <button height="1" alignment="center" verticalAlignment="center" title="Button" id="UMe-Bg-TzL"/>
-                                <button height="1" alignment="center" verticalAlignment="center" title="Button" id="CDu-Mh-8qp"/>
-                            </items>
-                        </group>
+                        <imageView alignment="center" verticalAlignment="center" id="Fst-AR-mdu"/>
                     </items>
                     <connections>
                         <outlet property="imageView" destination="Fst-AR-mdu" id="Jsu-dQ-bNK"/>
