iOS page control

--- a/Example/YOGraphImageKit Demo App (iOS)/Base.lproj/Main.storyboard
+++ b/Example/YOGraphImageKit Demo App (iOS)/Base.lproj/Main.storyboard
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1rZ-9I-tgj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="rWy-RT-wPx">
+            <objects>
+                <viewController id="1rZ-9I-tgj" customClass="ViewController" customModule="YOGraphImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rv0-0H-ZXM"/>
+                        <viewControllerLayoutGuide type="bottom" id="iw2-fE-B3I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6P2-ch-rvw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vMY-ZX-54g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-607" y="-365"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="r0C-SU-3wl">
+            <objects>
+                <pageViewController storyboardIdentifier="PageController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="q4V-4p-wE4" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DX9-eZ-TDs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-607" y="286"/>
+        </scene>
+        <!--Chart Image View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="YOGraphImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChartImageViewController" id="BYZ-38-t0r" customClass="ChartImageViewController" customModule="YOGraphImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,10 +43,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ixL-2Y-lsp">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
+                                <rect key="frame" x="140" y="180" width="320" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="KAY-TQ-F4d"/>
-                                    <constraint firstAttribute="width" constant="240" id="viQ-bW-YNW"/>
+                                    <constraint firstAttribute="height" constant="240" id="KAY-TQ-F4d"/>
+                                    <constraint firstAttribute="width" constant="320" id="viQ-bW-YNW"/>
                                 </constraints>
                             </imageView>
                         </subviews>
