--- a/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
+++ b/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8121.20" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8066.14"/>
     </dependencies>
     <scenes>
-        <!--Line Chart Interface Controller-->
+        <!--Solid Line Chart Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="LineChartInterfaceController" customModule="YOChartImageKit_Demo">
+                <controller id="AgC-eL-Hgc" customClass="SolidLineChartInterfaceController" customModule="YOChartImageKit_Demo">
                     <items>
                         <imageView alignment="center" verticalAlignment="center" id="Fst-AR-mdu"/>
                     </items>
                     <connections>
                         <outlet property="imageView" destination="Fst-AR-mdu" id="Jsu-dQ-bNK"/>
-                        <segue destination="4qn-9b-EgK" kind="relationship" relationship="nextPage" id="kQx-Dz-BYg"/>
+                        <segue destination="G2f-Q2-DBu" kind="relationship" relationship="nextPage" id="pcF-jG-OOt"/>
                     </connections>
                 </controller>
             </objects>
@@ -35,6 +35,21 @@
             </objects>
             <point key="canvasLocation" x="537" y="331"/>
         </scene>
+        <!--Smooth Line Chart Interface Controller-->
+        <scene sceneID="HIq-fC-33p">
+            <objects>
+                <controller hidesWhenLoading="NO" id="G2f-Q2-DBu" customClass="SmoothLineChartInterfaceController" customModule="YOChartImageKit_Demo">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" id="q14-e0-dfi"/>
+                    </items>
+                    <connections>
+                        <outlet property="imageView" destination="q14-e0-dfi" id="vJa-4q-yBF"/>
+                        <segue destination="4qn-9b-EgK" kind="relationship" relationship="nextPage" id="PNf-Vj-uqn"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="373" y="331"/>
+        </scene>
         <!--Donut Chart Interface Controller-->
         <scene sceneID="8jP-0f-amr">
             <objects>
@@ -47,7 +62,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="849" y="331"/>
+            <point key="canvasLocation" x="703" y="331"/>
         </scene>
     </scenes>
 </document>
