--- a/Example/YOGraphImageKit Demo App (iOS)/Base.lproj/Main.storyboard
+++ b/Example/YOGraphImageKit Demo App (iOS)/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1rZ-9I-tgj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1rZ-9I-tgj">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="rWy-RT-wPx">
             <objects>
-                <viewController id="1rZ-9I-tgj" customClass="ViewController" customModule="YOGraphImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1rZ-9I-tgj" customClass="ViewController" customModule="YOChartImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rv0-0H-ZXM"/>
                         <viewControllerLayoutGuide type="bottom" id="iw2-fE-B3I"/>
@@ -33,7 +33,7 @@
         <!--Chart Image View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ChartImageViewController" id="BYZ-38-t0r" customClass="ChartImageViewController" customModule="YOGraphImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChartImageViewController" id="BYZ-38-t0r" customClass="ChartImageViewController" customModule="YOChartImageKit_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
