--- a/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
+++ b/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3BN-5p-JBx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8083.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9515"/>
     </dependencies>
     <scenes>
         <!--Solid Line Chart Interface Controller-->
@@ -78,6 +78,21 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="693" y="331"/>
+        </scene>
+        <!--Spinning Donut Chart Interface Controller-->
+        <scene sceneID="Ohk-cz-L5B">
+            <objects>
+                <controller id="3BN-5p-JBx" customClass="SpinningDonutChartInterfaceController" customModule="YOChartImageKit_Demo">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" id="Yt6-Jy-hoG"/>
+                    </items>
+                    <connections>
+                        <outlet property="imageView" destination="Yt6-Jy-hoG" id="Dm9-eJ-pMW"/>
+                        <segue destination="AgC-eL-Hgc" kind="relationship" relationship="nextPage" id="o1K-mV-iv1"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="60" y="331"/>
         </scene>
     </scenes>
 </document>
