--- a/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
+++ b/Example/YOGraphImageKit Demo App (watchOS)/Base.lproj/Interface.storyboard
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11535.1" systemVersion="16B2555" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8083.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11508"/>
     </dependencies>
     <scenes>
         <!--Solid Line Chart Interface Controller-->
@@ -59,6 +62,7 @@
                     </items>
                     <connections>
                         <outlet property="imageView" destination="bwX-ff-TQu" id="hsx-0k-2na"/>
+                        <segue destination="IdV-0N-bCp" kind="relationship" relationship="nextPage" id="La8-63-6lg"/>
                     </connections>
                 </controller>
             </objects>
@@ -78,6 +82,50 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="693" y="331"/>
+        </scene>
+        <!--Vertical Bar Gradient Chart Interface Controller-->
+        <scene sceneID="TU0-aj-a9P">
+            <objects>
+                <controller id="IdV-0N-bCp" customClass="VerticalBarGradientChartInterfaceController" customModule="YOChartImageKit_Demo">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" id="NDg-mF-Jfz"/>
+                    </items>
+                    <connections>
+                        <outlet property="imageView" destination="NDg-mF-Jfz" id="1uL-PC-bvL"/>
+                        <segue destination="29v-7x-wu7" kind="relationship" relationship="nextPage" id="nFb-Vn-Ue2"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="1078" y="331"/>
+        </scene>
+        <!--Solid Line Gradient Chart Interface Controller-->
+        <scene sceneID="Xxt-yz-cxb">
+            <objects>
+                <controller id="gU5-mh-41N" customClass="SolidLineGradientChartInterfaceController" customModule="YOChartImageKit_Demo">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" id="jEG-LI-EIu"/>
+                    </items>
+                    <connections>
+                        <outlet property="imageView" destination="jEG-LI-EIu" id="TUs-9E-QuV"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="1578" y="331"/>
+        </scene>
+        <!--Smooth Line Gradient Chart Interface Controller-->
+        <scene sceneID="YGi-Bd-dHo">
+            <objects>
+                <controller hidesWhenLoading="NO" id="29v-7x-wu7" customClass="SmoothLineGradientChartInterfaceController" customModule="YOChartImageKit_Demo">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" id="b7G-XS-SBG"/>
+                    </items>
+                    <connections>
+                        <outlet property="imageView" destination="b7G-XS-SBG" id="ddj-s1-qMb"/>
+                        <segue destination="gU5-mh-41N" kind="relationship" relationship="nextPage" id="jBG-9a-dpJ"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="1333" y="331"/>
         </scene>
     </scenes>
 </document>
